# py_web_module_10_hw

./: .gitignore  README.md  pyproject.toml
hw10_quotes/hw10_quotes/: asgi.py  settings.py  urls.py  wsgi.py
hw10_quotes/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw10_quotes/quotes/migrations/: 0001_initial.py  0002_alter_quote_author.py  0002_author_user_tag_user_tag_tag_of_username.py
hw10_quotes/quotes/static/quotes/: style.css
hw10_quotes/quotes/templates/quotes/: about_author.html  add_author.html  add_quote.html  add_tag.html  author_details.html  base.html  index.html  index_bkp2.html  tag.html
hw10_quotes/quotes/templates/registration/: login.html  register.html
hw10_quotes/quotes/templatetags/: extract_authors.py
hw10_quotes/users/: forms.py  forms_1.py  models.py  urls.py  views.py
hw10_quotes/users/migrations/: 0001_initial.py  0002_profile_avatar.py
hw10_quotes/users/static/users/: style.css
hw10_quotes/users/templates/users/: add_author.html  add_quote_author.html  login.html  logout.html  profile.html  signin.html  signout.html  signup.html
hw10_quotes/utils/: migrationdb.py
